3.0.4

3.0.3
Issue #2303 Get-BestGenericImageName sometimes returns an image which is newer than the host OS
Hardcode replacement artifacts for 16.18
Issue #2308 Added blobPath to Publish-BuildOutputToStorage
Issue #2321 Add language to Start-BcContainerAppDataUpgrade
Issue #2320 Better error message in Publish-PerTenantExtensionApps
Issue #2325 Support for resourceExposurePolicy in Extract-AppFileToFolder
Issue #2286 Publish-NavContainerApp -upgrade -install fails if app was not installed before
Issue #2342 Publish-NavContainerApp and Replace-DependenciesInAppFile doesn't support ResourceExposurePolicy
Adding Argentina, Chile and Puerto Rico to the country map, mapping to w1
Get CreateTestUsers app from new feed
Add support for compiling with Windows auth
Do not display query parameters of licensefile url
Allow wildcards when publishing apps from inside container

3.0.2
Issue #2280 TypeNotFound on [Path]::GetFileName($vsixUrl)
Issue "2287 Create-AadAppsForBC function now creating error when used along with -preAuthorizePowerShell
Issue - Resolve-DependenciesFromAzureFeed not ignoring first lvl dependencies
Issue - Resolve-DependenciesFromAzureFeed not working with 4.0 and lower runtimes
Support OpenIdConnect for AAD setup for v20+
Hardcode replacement artifacts for 18.9 and 17.14 builds

3.0.1
Fix issues with bacpac creation when windows users are present in database.
Add Daily and Weekly options to Get-BcArtifactUrl
Performance optimization of Get-BcArtifactUrl
Get-BcContainerEventLog now copies the eventlog to HostHelperFolder\EventLogs instead of my folder to avoid blocking container deletion
Remove Application Roles from bacpacs (re. VA1246 - https://docs.microsoft.com/en-us/azure/azure-sql/database/sql-database-vulnerability-assessment-rules)
Issue #2245 - UnInstall-BcContainerApp -doNotSaveData fails
Add parameter -GrantAdminConsent to Create-AadAppsForBC
Use Microsoft Graph API (instead of deprecated Azure AD Graph API) in Create-AadAppsForBC