@@ -145,13 +145,13 @@ try {
         }
         else {
             $manifest.Package.ChildNodes | Where-Object { $_.name -eq "ResourceExposurePolicy" } | % { 
-                $appJson += @{
-                    "resourceExposurePolicy" = @{
-                        "allowDebugging" = $_.AllowDebugging -eq "true"
-                        "allowDownloadingSource" = $_.AllowDownloadingSource -eq "true"
-                        "includeSourceInSymbolFile" = $_.IncludeSourceInSymbolFile -eq "true"
+                $resExp = [ordered]@{}
+                $_.Attributes | ForEach-Object {
+                    $resExp += @{
+                        "$($_.Name)" = $_.Value -eq "true"
                     }
                 }
+                $appJson += @{ "resourceExposurePolicy" = $resExp }
             }
        
         }
